<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/bgColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:onClick="onClickButton"
        android:text="@string/backColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/statusBarColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onClickButton"
        android:text="@string/statusBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgColor" />

    <Button
        android:id="@+id/actionBarColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onClickButton"
        android:text="@string/actionBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusBarColor" />

    <Button
        android:id="@+id/apply"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:onClick="onClickButton"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>